rebase all logic

--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "express-api",
+  "name": "express-vercel-api",
   "version": "1.0.0",
   "description": "",
   "main": "./app.js",
   "scripts": {
-    "start": "nodemon ./app.js",
+    "start": "vercel dev",
     "vercel-build": "echo run"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/kv": "^0.2.1",
     "cors": "^2.8.5",
     "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
   }
 }
