--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.development.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -71,3 +72,4 @@ typings/
 
 # Serverless directories
 .serverless
+.vercel
