--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-vercel-api",
+  "name": "vercel-api",
   "version": "1.0.0",
   "description": "",
   "main": "./app.js",
@@ -10,8 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vercel/kv": "^0.2.1",
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "@vercel/kv": "^0.2.1"
   }
 }
